# KasperskyTask

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/scanner/: Hash.h  Logger.cpp  Logger.h  MD5FileHasher.cpp  MD5FileHasher.h  MalwareHashBase.cpp  MalwareHashBase.h  Scanner.cpp  Scanner.h
src/utils/: Clock.h
tests/: CMakeLists.txt  base_tests.cpp  logger_tests.cpp  scanner_tests.cpp  tests.h
tests/data/: base.csv
tests/data/dir_to_test/subdir1/: subdir1dummy1.txt  subdir1dummy2.txt  subdir1dummy3.txt  subdir1dummy4.txt
tests/data/dir_to_test/subdir1/subsubdir1/: subsubdir1dummy1.txt  subsubdir1dummy2.txt
tests/data/dir_to_test/subdir2/: subdir2dummy1.txt  subdir2dummy2.txt  subdir2dummy3.txt  subdir2dummy4.txt
tests/helpers/: TemporaryDirectory.cpp  TemporaryDirectory.h  TemporaryFile.cpp  TemporaryFile.h  TemporaryPath.cpp  TemporaryPath.h
